# unleashed

./: .gitignore  .unleashed.json  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  TELEMETRY.md  pyproject.toml
.claude/: settings.json  settings.local.json
archive/: rename-mapping.txt  sentinel.py-uncommitted_2026-01-18_00-41-00  unleashed-A01.py  unleashed-A03.py  unleashed-A04.py  unleashed-A05.py  unleashed-A06.py  unleashed-A07.py  unleashed-A10.py  unleashed-A11.py  unleashed-A14.py  unleashed-A16.py  unleashed-c-17.py  unleashed-danger-test.py  unleashed-danger-test.py-a527fd7_2026-01-16_10-54-55  unleashed-danger.py-a527fd7_2026-01-16_10-54-55  unleashed-g.py  unleashed-test-A02.py  unleashed-test.py-a527fd7_2026-01-16_10-54-55  unleashed.py-50596c0_2026-01-14_13-12-52  unleashed.py-733ffa3_2026-01-14_12-07-40  unleashed.py-a527fd7_2026-01-16_10-54-55  unleashed.py-bbe20a4_2026-01-15_09-54-35
docs/: audit-checklist.md  blog-draft.md  codex-proxy-verification-prompt.md  commands.md  gemini-shell-detection-prompt.md  lessons-learned.md  process-budget.md  shift-tab-bug-analysis.md  skills-0603.md  unleashed-t-01-test-plan.md
plan/: unleashed-g-plan.md
src/: clean_transcript.py  sentinel-test.py  sentinel_gate.py  sentinel_rules.py  test_emoji.py  test_mirror.py  transcript_filters.py  unleashed-00002.py  unleashed-00003.py  unleashed-00004.py  unleashed-00005.py  unleashed-00006.py  unleashed-00007.py  unleashed-00008.py  unleashed-00009.py  unleashed-00010.py  unleashed-00011.py  unleashed-00012.py  unleashed-00013.py  unleashed-00014.py  (+28 more)
(+32 files in other folders)
